# SimpleRKNN

./: .gitignore  CMakeLists.txt  README.MD
include/SimpleRKNN/: SimpleRKNN.h  info_rknn.h  option.h  rknn_queue.h  simple_rknn.h
lib/: SimpleRKNN.cpp  rknn_queue.cpp  simple_rknn.cpp
lib/include/: rknn_queue.h
module/include/msd/: LICENSE  READMD.md  blocking_iterator.hpp
